<resources>
    <string name="app_name">weather_app_ui</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="details">Details</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ahmedabad">Ahmedabad</string>
    <string name="_18">18</string>
    <string name="cloudy">cloudy</string>
    <string name="todo">TODO</string>
    <string name="_13">13%</string>
    <string name="_0_533_mbar">0.533 mbar</string>
    <string name="_90_km_h">90 km/h</string>
    <string name="_10_00_am">10 AM</string>
    <string name="today">Today</string>
    <string name="week">week</string>
    <string name="wednesday">Wednesday</string>
    <string name="surat">Surat</string>
    <string name="india">India</string>
    <string name="your_location">Your Location...</string>
    <string name="full_address">Ahmedabad, Gujarat, India</string>
    <string name="sunny">sunny</string>
    <string name="month">Month</string>
    <string name="tempratature">Tempratature</string>

</resources>