<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:paddingHorizontal = "20dp"
    android:paddingVertical="10dp"
    android:clickable="true"
    android:focusable="true"
    android:theme="@style/ClickableView"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/time"
        android:text="@string/_10_00_am"
        android:textSize="10sp"
        android:textColor="@color/lightBlack"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-medium" />

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/sunny"
        android:scaleType="centerInside"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:id="@+id/icon" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/day_temp"
            android:text="@string/_18"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:textColor="@color/selectedIcon"
            android:fontFamily="sans-serif-medium" />

        <ImageView
            android:layout_width="4dp"
            android:layout_height="4dp"
            android:src="@drawable/celsiussmall"
            android:layout_marginTop="2dp"
            android:layout_marginStart="2dp"
            android:contentDescription="@string/todo" />

    </LinearLayout>

</LinearLayout>