<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="25dp"
    android:paddingHorizontal="10dp"
    android:weightSum="3">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/Lightgray"
        app:cardCornerRadius="10dp"
        android:layout_marginBottom="5dp"
        android:elevation="5dp"
        android:layout_weight="0.7">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingHorizontal="10dp"
            android:paddingVertical="5dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/drop" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_13"
                android:layout_marginStart="10dp"
                android:textSize="14sp"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/black" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <View
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.1" />

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/Lightgray"
        app:cardCornerRadius="10dp"
        android:layout_marginBottom="5dp"
        android:elevation="5dp"
        android:layout_weight="1.1">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingHorizontal="10dp"
            android:paddingVertical="5dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/info" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0_533_mbar"
                android:layout_marginStart="10dp"
                android:textSize="14sp"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/black" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <View
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.1" />

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/Lightgray"
        app:cardCornerRadius="10dp"
        android:layout_marginBottom="5dp"
        android:elevation="5dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingHorizontal="10dp"
            android:paddingVertical="5dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/wind" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_90_km_h"
                android:layout_marginStart="10dp"
                android:textSize="14sp"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/black" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>